--- a/playbooks/common_55.yml
+++ b/playbooks/common_55.yml
@@ -4,9 +4,7 @@
 #   installs latest version of PS 5.5, PT and PXB 2.3
 #   does some tests
 
-- hosts: all
-  become: true
-  become_method: sudo
+- hosts: pkg-test
 
   tasks:
   - name: include tasks for test env setup
