--- a/playbooks/common_56.yml
+++ b/playbooks/common_56.yml
@@ -4,9 +4,7 @@
 #   installs latest version of PS 5.6, PT and PXB 2.3
 #   does some tests
 
-- hosts: all
-  become: true
-  become_method: sudo
+- hosts: pkg-test
 
   tasks:
   - name: include tasks for test env setup
@@ -82,9 +80,9 @@
     command: systemctl start mysql
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
 
-  - name: disable selinux on centos7 for TokuDB to work
-    command: setenforce 0
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
+#  - name: disable selinux on centos7 for TokuDB to work
+#    command: setenforce 0
+#    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
 
   - name: install tokudb and restart server
     command: /usr/bin/ps_tokudb_admin --enable --enable-backup
