--- a/playbooks/common_56_upgrade.yml
+++ b/playbooks/common_56_upgrade.yml
@@ -6,9 +6,7 @@
 #   upgrades packages to the new version
 #   does some tests
 
-- hosts: all
-  become: true
-  become_method: sudo
+- hosts: pkg-test
 
   tasks:
   - name: include tasks for test env setup
@@ -87,9 +85,9 @@
     command: systemctl start mysql
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
 
-  - name: disable selinux on centos7 for TokuDB to work
-    command: setenforce 0
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
+#  - name: disable selinux on centos7 for TokuDB to work
+#    command: setenforce 0
+#    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
 
   - name: install tokudb and restart server
     command: /usr/bin/ps_tokudb_admin --enable --enable-backup
