--- a/playbooks/proxysql.yml
+++ b/playbooks/proxysql.yml
@@ -4,9 +4,7 @@
 #   installs latest version of proxysql
 #   does some tests
 
-- hosts: all
-  become: true
-  become_method: sudo
+- hosts: pkg-test
 
   tasks:
   - name: include tasks for test env setup
