--- a/playbooks/psmdb_32_upgrade.yml
+++ b/playbooks/psmdb_32_upgrade.yml
@@ -6,9 +6,7 @@
 #   upgrades packages to the new version
 #   does some tests
 
-- hosts: all
-  become: true
-  become_method: sudo
+- hosts: pkg-test
 
   tasks:
   - name: include tasks for test env setup
