--- a/molecule/ps-80-maj-upgrade-to/molecule/default/molecule.yml
+++ b/molecule/ps-80-maj-upgrade-to/molecule/default/molecule.yml
@@ -1,6 +1,10 @@
 ---
 scenario:
   name: default
+  destroy_sequence:
+    - destroy
+  cleanup_sequence:
+    - cleanup
   test_sequence:
     - lint
     - destroy
